# whoop-python-client

./: .gitignore  404.html  CLAUDE.md  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/: copilot-instructions.md
.github/workflows/: mkdocs.yml
.knowledge/: CLAUDE.initial.md  PLAN.md  openapi-spec.json
docs/: getting-started.md  index.md
docs/endpoints/: cycle.md  sleep.md  user.md
docs/reference/: auth.md  client.md  cycle.md  models.md  sleep.md  user.md
getting-started/: index.html
reference/auth/: index.html
reference/cycle/: index.html
reference/models/: index.html
reference/sleep/: index.html
reference/user/: index.html
search/: search_index.json
src/whoop_client/: __init__.py  auth.py  client.py
src/whoop_client/models/: __init__.py  common.py  cycle.py  recovery.py  sleep.py  user.py  workout.py
tests/: test_client.py  test_models.py
tests/test_endpoints/: test_cycle.py  test_user.py
